--- a/jevidence-java-logger/pom.xml
+++ b/jevidence-java-logger/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>pl.lstypka</groupId>
             <artifactId>jevidence-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
