--- a/jevidence-java-logger/pom.xml
+++ b/jevidence-java-logger/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.lstypka</groupId>
+    <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-java-logger</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
     <name>jEvidence - java logger</name>
     <description>jEvidence extension for java logger framework</description>
     <url>https://github.com/lstypka/jevidence</url>
@@ -40,11 +40,23 @@
 
     <dependencies>
         <dependency>
-            <groupId>pl.lstypka</groupId>
+            <groupId>pl.stypka.jevidence</groupId>
             <artifactId>jevidence-core</artifactId>
-            <version>1.0</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <developers>
+        <developer>
+            <id>lstypka</id>
+            <name>Łukasz Stypka</name>
+            <email>lukasz.stypka@gmail.com</email>
+            <url>http://stypka.pl</url>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
 
     <build>
         <plugins>
