--- a/example-testng/src/main/resources/jevidence.properties
+++ b/example-testng/src/main/resources/jevidence.properties
@@ -1,3 +1,3 @@
-jevidence.reportPath=E:\\reportNg
+jevidence.reportPath=E:\\jevidence
 jevidence.removeExecutions=true
 jevidence.maxNumberOfExecutions=50
