--- a/jevidence-core/pom.xml
+++ b/jevidence-core/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.lstypka.jevidence</groupId>
+    <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-core</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>jEvidence - core</name>
     <description>Core of jEvidence framework</description>
     <url>https://github.com/lstypka/jevidence</url>
