--- a/jevidence-testng/pom.xml
+++ b/jevidence-testng/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>pl.stypka.jevidence</groupId>
             <artifactId>jevidence-core</artifactId>
-            <version>1.0</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
