--- a/example-testng/src/main/resources/jevidence.properties
+++ b/example-testng/src/main/resources/jevidence.properties
@@ -1,4 +1,4 @@
-#jevidence.reportPath=E:\\jevidence
+jevidence.reportPath=E:\\jevidence
 jevidence.removeExecutions=true
-jevidence.maxNumberOfExecutions=50
+jevidence.maxNumberOfExecutions=3
 jevidence.embedded=true
