--- a/jevidence-core/pom.xml
+++ b/jevidence-core/pom.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-core</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>${jevidence.version}</version>
     <name>jEvidence - core</name>
     <description>Core of jEvidence framework</description>
     <url>https://github.com/lstypka/jevidence</url>
+
+    <parent>
+        <groupId>pl.stypka.jevidence</groupId>
+        <artifactId>jevidence-parent</artifactId>
+        <relativePath>../pom.xml</relativePath>
+        <version>${jevidence.version}</version>
+    </parent>
 
     <licenses>
         <license>
@@ -26,15 +32,7 @@
         <connection>scm:git:git@github.com:lstypka/jevidence.git</connection>
         <developerConnection>scm:git:git@github.com:lstypka/jevidence.git</developerConnection>
       <tag>1.0</tag>
-  </scm>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.6</java.version>
-        <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
-        <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
-        <wagon-ftp.version>2.6</wagon-ftp.version>
-    </properties>
+    </scm>
 
     <dependencies>
         <dependency>
