--- a/jevidence-testng/pom.xml
+++ b/jevidence-testng/pom.xml
@@ -3,13 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-testng</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>${jevidence.version}</version>
     <name>jEvidence - testNg</name>
     <description>jEvidence extension for testNg framework</description>
     <url>https://github.com/lstypka/jevidence</url>
+
+    <parent>
+        <groupId>pl.stypka.jevidence</groupId>
+        <artifactId>jevidence-parent</artifactId>
+        <relativePath>../pom.xml</relativePath>
+        <version>${jevidence.version}</version>
+    </parent>
 
     <licenses>
         <license>
@@ -30,19 +36,11 @@
         <tag>1.0</tag>
     </scm>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.6</java.version>
-        <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
-        <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
-        <wagon-ftp.version>2.6</wagon-ftp.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>pl.stypka.jevidence</groupId>
             <artifactId>jevidence-core</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>${jevidence.version}</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
