--- a/jevidence-core/pom.xml
+++ b/jevidence-core/pom.xml
@@ -11,8 +11,7 @@
     <parent>
         <groupId>pl.stypka.jevidence</groupId>
         <artifactId>jevidence-parent</artifactId>
-        <relativePath>../pom.xml</relativePath>
-        <version>${jevidence.version}</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <licenses>
