#26 #27 Fixed calendar problem, updated JEVIDENCE_TIMESTAMP

--- a/jevidence-example-testng/src/main/resources/jevidence.properties
+++ b/jevidence-example-testng/src/main/resources/jevidence.properties
@@ -1,4 +1,5 @@
-jevidence.reportPath=jEvidenceReport
+#jevidence.reportPath=jevidence
+jevidence.reportPath=E:\\jevidence
 jevidence.removeExecutions=true
 jevidence.maxNumberOfExecutions=25
-jevidence.embedded=true
+jevidence.embedded=false
