--- a/jevidence-example-testng/src/main/resources/jevidence.properties
+++ b/jevidence-example-testng/src/main/resources/jevidence.properties
@@ -1,5 +1,4 @@
-#jevidence.reportPath=jevidence
-jevidence.reportPath=E:\\jevidence
+jevidence.reportPath=jevidence
 jevidence.removeExecutions=true
 jevidence.maxNumberOfExecutions=25
 jevidence.embedded=false
