--- a/jevidence-example-testng/pom.xml
+++ b/jevidence-example-testng/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-example-testng</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <name>jEvidence - testng example</name>
     <description>Example usage of jEvidence with testNg framework</description>
     <url>https://github.com/lstypka/jevidence</url>
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>pl.stypka.jevidence</groupId>
             <artifactId>jevidence-testng</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
