--- a/jevidence-log4j/pom.xml
+++ b/jevidence-log4j/pom.xml
@@ -6,16 +6,18 @@
 
     <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-log4j</artifactId>
-    <version>${jevidence.version}</version>
+    <version>1.1</version>
     <name>jEvidence - log4j</name>
     <description>jEvidence extension for log4j framework</description>
     <url>https://github.com/lstypka/jevidence</url>
 
-    <parent>
-        <groupId>pl.stypka.jevidence</groupId>
-        <artifactId>jevidence-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
-    </parent>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.6</java.version>
+        <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
+        <wagon-ftp.version>2.6</wagon-ftp.version>
+    </properties>
 
     <licenses>
         <license>
@@ -40,7 +42,7 @@
         <dependency>
             <groupId>pl.stypka.jevidence</groupId>
             <artifactId>jevidence-core</artifactId>
-            <version>${jevidence.version}</version>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
