--- a/jevidence-core/pom.xml
+++ b/jevidence-core/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-core</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>jEvidence - core</name>
     <description>Core of jEvidence framework</description>
     <url>https://github.com/lstypka/jevidence</url>
