--- a/jevidence-java-logger/pom.xml
+++ b/jevidence-java-logger/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-java-logger</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>jEvidence - java logger</name>
     <description>jEvidence extension for java logger framework</description>
     <url>https://github.com/lstypka/jevidence</url>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>pl.stypka.jevidence</groupId>
             <artifactId>jevidence-core</artifactId>
-            <version>1.1</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
