--- a/jevidence-log4j/pom.xml
+++ b/jevidence-log4j/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-log4j</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>jEvidence - log4j</name>
     <description>jEvidence extension for log4j framework</description>
     <url>https://github.com/lstypka/jevidence</url>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>pl.stypka.jevidence</groupId>
             <artifactId>jevidence-core</artifactId>
-            <version>1.1</version>
+            <version>1.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
