--- a/jevidence-junit/pom.xml
+++ b/jevidence-junit/pom.xml
@@ -48,6 +48,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
