--- a/jevidence-testng/pom.xml
+++ b/jevidence-testng/pom.xml
@@ -47,6 +47,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.9.10</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
