--- a/jevidence-example-log4j/pom.xml
+++ b/jevidence-example-log4j/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-example-log4j</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <name>jEvidence - junit example</name>
     <description>Example usage of jEvidence with junit framework</description>
     <url>https://github.com/lstypka/jevidence</url>
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>pl.stypka.jevidence</groupId>
             <artifactId>jevidence-junit</artifactId>
-            <version>1.2-SNAPSHOT</version>
+            <version>1.2</version>
         </dependency>
         <dependency>
             <groupId>pl.stypka.jevidence</groupId>
@@ -30,6 +30,11 @@
             <groupId>org.easytesting</groupId>
             <artifactId>fest-assert</artifactId>
             <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
     </dependencies>
 
