--- a/jevidence-junit/pom.xml
+++ b/jevidence-junit/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.stypka.jevidence</groupId>
     <artifactId>jevidence-junit</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <name>jEvidence - jUnit</name>
     <description>jEvidence extension for jUnit framework</description>
     <url>https://github.com/lstypka/jevidence</url>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>pl.stypka.jevidence</groupId>
             <artifactId>jevidence-core</artifactId>
-            <version>1.2</version>
+            <version>1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
